[gd_scene load_steps=13 format=3 uid="uid://dghq0afywihnp"]

[ext_resource type="Script" uid="uid://dj2tss48hhcwk" path="res://scenes/entities/player/player.gd" id="1_1hmtu"]
[ext_resource type="Texture2D" uid="uid://cxurytl3ls5ue" path="res://assets/sprites/player_sprites/player1.png" id="3_58kc7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_58kc7"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("3_58kc7")

[sub_resource type="QuadMesh" id="QuadMesh_nh4ur"]
material = SubResource("StandardMaterial3D_58kc7")
size = Vector2(2, 3)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0qees"]
radius = 1.25739
height = 3.49107

[sub_resource type="Animation" id="Animation_635qg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_58kc7"]
resource_name = "look_down"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(2.07053, 0.466517),
"update": 0,
"values": [Vector3(1.5708, 0, 0), Vector3(-0.349066, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1hmtu"]
resource_name = "look_up"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.466517, 2.07053),
"update": 0,
"values": [Vector3(-0.349066, 0, 0), Vector3(1.5708, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8akj5"]
resource_name = "turn_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nh4ur"]
_data = {
&"RESET": SubResource("Animation_635qg"),
&"look_down": SubResource("Animation_58kc7"),
&"look_up": SubResource("Animation_1hmtu"),
&"turn_left": SubResource("Animation_8akj5")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_635qg"]
albedo_color = Color(0.42238, 0.173202, 0.124375, 1)
albedo_texture_force_srgb = true

[sub_resource type="PrismMesh" id="PrismMesh_635qg"]
material = SubResource("StandardMaterial3D_635qg")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1hmtu")

[node name="Model" type="Node3D" parent="."]

[node name="Mesh1" type="MeshInstance3D" parent="Model"]
mesh = SubResource("QuadMesh_nh4ur")
skeleton = NodePath("../..")

[node name="Mesh2" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.0388879)
mesh = SubResource("QuadMesh_nh4ur")
skeleton = NodePath("../..")

[node name="Mesh3" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0170198, 0, -0.0100423)
mesh = SubResource("QuadMesh_nh4ur")
skeleton = NodePath("../..")

[node name="Mesh4" type="MeshInstance3D" parent="Model"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0170198, 0, -0.0288456)
mesh = SubResource("QuadMesh_nh4ur")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0qees")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.663649, 0.0223242)
keep_aspect = 0

[node name="RayCast1" type="RayCast3D" parent="."]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, 5, 0, -5, -2.18557e-07, 0, 0, 0)
collision_mask = 2

[node name="RayCast2" type="RayCast3D" parent="."]
transform = Transform3D(-5, -4.37114e-07, -1.91069e-14, 0, -2.18557e-07, 5, -4.37114e-07, 5, 2.18557e-07, 0, 0, 0)
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nh4ur")
}
speed_scale = 30.0

[node name="DirectionPointer" type="MeshInstance3D" parent="."]
transform = Transform3D(0.527364, 0, 0, 0, -2.01472e-08, -0.369414, 0, 0.460915, -1.61476e-08, -0.0487345, 1.71092, 0.535479)
layers = 16
mesh = SubResource("PrismMesh_635qg")
